# extel

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  clippy.yml
e2e/: Cargo.toml
e2e/c_src/: Makefile  test.c
e2e/src/: main.rs
e2e/src/tests/: command_tests.rs  math_tests.rs  mod.rs  unsupported_errors.rs  utf8_tests.rs
extel/: Cargo.toml  README.md
extel/src/: errors.rs  lib.rs  macros.rs
extel/src/test_sets/: echo.rs
extel_parameterized/: Cargo.toml  README.md
extel_parameterized/src/: lib.rs
extel_parameterized/tests/: parameterized.rs
src/: lib.rs  macros.rs
src/test_sets/: echo.rs
