[package]
name = "extel_parameterized"
description = "A proc macro crate for creating parameterized tests for Extel"
authors = ["Jacob Strader <jtstrader851@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jtstrader/extel"
license = "MIT"
keywords = ["testing", "test", "parameterized"]
categories = ["development-tools", "development-tools::testing"]
exclude = ["/tests"]

[lib]
proc-macro = true

[dev-dependencies]
extel = { path = "../extel" }
